tests/baselines/reference/classCannotExtendVar.errors.txt
tests/cases/compiler/classCannotExtendVar.ts(3,7): error TS2300: Duplicate identifier 'Markup'.


==== tests/cases/compiler/classCannotExtendVar.ts (1 errors) ====
    var Markup;
    
    class Markup {
          ~~~~~~
!!! error TS2300: Duplicate identifier 'Markup'.
        constructor() {
        }
    }
    